fixed width overflow

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,7 +5,7 @@ body{
 
 .App{
     margin: auto;
-    width: 100vw;
+    width: 100%;
     min-height: 100vh;
     display:flex;
     flex-direction: column;
